# shadow-pal

./: shadow-pal.cabal  stack.yaml
app/: Main.hs  geo.frag  geo.vert  shadowMap.vert
