name:                shadow-pal
version:             0.1.0.0
synopsis:            GL shadow implementations
description:         Please see README.md
homepage:            http://github.com/lukexi/shadow-pal#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable shadow-pal
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shadow-pal
                     , mtl
                     , time
                     , halive
                     , gl-pal
                     , glfw-pal
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/shadow-pal
